--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="previous">previous</string>
     <string name="next">next</string>
+    <string name="course">Enter Course Info:</string>
+    <string name="create">Create</string>
+    <string name="cancel">Cancel</string>
 </resources>
