Added Google Maps API. Created Map Fragment and added it to DetailFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="create">Create</string>
     <string name="cancel">Cancel</string>
     <string name="Course_details">Course Details</string>
+    <string name="google_maps_key">AIzaSyBKlsLuC12I9yG7NqL1madWRQ9q9ugyt_w</string>
 </resources>
